# lean-lsp

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
lean_lsp/: main.py
lean_lsp/kernel/: README.md  __main__.py  handlers.py  install.py  kernel.py  manager.py
lean_lsp/kernel/lean4/: kernel.json
