[metadata]
name = lean-lsp
version = 0.0.1
description = YAML language server Python wrapper
author = Utensil Song
url = https://github.com/utensil/lean-lsp
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
keywords = Jupyter, JupyterLab, Lean, language-server

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    lean-lsp = lean_lsp.main:main
jupyter_lsp_spec_v1 =
    jupyter-lean-language-server = lean_lsp.main:load